cancel a captcha on a mobile devices, fix horizontal scroll bug and scalation feature on ios devices

--- a/frontend/styles/assets/common.scss
+++ b/frontend/styles/assets/common.scss
@@ -11,9 +11,9 @@ html {
   color: #fff;
 }
 
+html,
 body {
   overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
 }
 
 h1, 
